web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__distinct__remove-duplicates-from-each-group__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\ngroup {first_name, last_name} (take 1)\n"
---
WITH table_0 AS (
    SELECT
        *,
        ROW_NUMBER() OVER (PARTITION BY first_name, last_name) AS _expr_0
    FROM employees
)

SELECT *
FROM table_0
WHERE _expr_0 <= 1
